--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- use the "fixed-top" bootstrap class to fix the nav bar to the top of page.
          BUT, remember to add enough padding to the top of the <body> -->
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="./index.html">CFG Project Demo (Tope)</a>
+    <a class="navbar-brand" href="./index.html">CFG Project Demo (Bola)</a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
       aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
